--- a/style.css
+++ b/style.css
@@ -56,8 +56,7 @@ section {
     flex-direction: column-reverse;
 
     /* #4 */
-    justify-content: center;
-    align-content: center;
+    align-items: center;
 
   } 
 
@@ -66,7 +65,6 @@ section {
       display: flex;
 
       /* #6 */
-      justify-content:flex-end;
       align-items: center;
       /* #7 */
       justify-content: space-between;
